# VIMES_VIsualization_of_Massive_Evolving_Stars

./: .gitignore  README.md  paper.md  pyproject.toml
src/vimes/: animate.py  cli.py  preprocess.py  temp_to_color.py
src/vimes_visualization_of_massive_evolving_stars/: __init__.py  temp_to_color.py
tests/: test_preprocess.py
